--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,16 +13,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Log in to ACR
+      - name: Log in to Aliyun ACR
         run: |
           echo "${{ secrets.REGISTRY_PASSWORD }}" \
-            | docker login ${{ secrets.ALIYUN_REGISTRY }} \
+            | docker login ${{ secrets.REGISTRY_DOMAIN }} \
               -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.ALIYUN_REGISTRY }}/infisical:latest .
+          docker build \
+            -t ${{ secrets.REGISTRY_DOMAIN }}/m-infisical/infisical:latest .
 
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.ALIYUN_REGISTRY }}/infisical:latest
+          docker push ${{ secrets.REGISTRY_DOMAIN }}/m-infisical/infisical:latest
