--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,17 +13,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Log in to Aliyun ACR
+      - name: 登录阿里云 ACR
         run: |
           echo "${{ secrets.REGISTRY_PASSWORD }}" \
-            | docker login ${{ secrets.REGISTRY_DOMAIN }} \
+            | docker login ${{ secrets.ALIYUN_REGISTRY }} \
               -u "${{ secrets.REGISTRY_USERNAME }}" --password-stdin
 
-      - name: Build Docker image
+      - name: 构建镜像
         run: |
           docker build \
-            -t ${{ secrets.REGISTRY_DOMAIN }}/m-infisical/infisical:latest .
+            -t ${{ secrets.ALIYUN_REGISTRY }}/${{ secrets.ALIYUN_NAMESPACE }}/infisical:latest .
 
-      - name: Push Docker image
+      - name: 推送镜像
         run: |
-          docker push ${{ secrets.REGISTRY_DOMAIN }}/m-infisical/infisical:latest
+          docker push ${{ secrets.ALIYUN_REGISTRY }}/${{ secrets.ALIYUN_NAMESPACE }}/infisical:latest
